--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -186,6 +186,7 @@
 
 .formGroup {
   margin-bottom: 25px;
+  min-height: 135px;
 }
 
 .formLabel {
@@ -234,6 +235,10 @@
 
 .formInput::placeholder {
   color: #9ca3af;
+}
+
+.Vaildsection {
+  font-size: 20px;
 }
 
 .otpContainer {
@@ -403,12 +408,29 @@
   /* equivalent to mt-2 */
 }
 
+.resendDisabled {
+  color: #6b7280;
+  /* Gray-500 */
+  cursor: not-allowed;
+}
+
+.resendActive {
+  color: #6366f1;
+  /* Indigo-500 */
+  font-weight: 500;
+}
+
+.changeButton {
+  color: #6f61c1;
+  font-weight: 500;
+}
+
 .socialLogin {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
-  padding: 16px;
+  padding: 10px;
   border: 2px solid #e5e7eb;
   border-radius: 12px;
   background: white;
@@ -416,6 +438,7 @@
   text-decoration: none;
   font-weight: 500;
   transition: all 0.3s ease;
+  width: 100%;
 }
 
 /* Dark mode social login button */
@@ -487,6 +510,27 @@
     max-width: 450px;
     margin: 0 auto;
     min-height: auto;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    padding: 0px;
+    min-height: 100vh;
+    max-width: 100%;
+  }
+
+  .loginSection {
+    max-width: 100%;
+    border-radius: 0px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .otpInput{
+    width: 45px;
+    height: 45px;
   }
 }
 
