--- a/src/app/dashboard/courses/coursepage.module.css
+++ b/src/app/dashboard/courses/coursepage.module.css
@@ -5,33 +5,21 @@
   border-radius: 20px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  padding: 20px;
 }
 
-.header {
-  background: linear-gradient(90deg, #4F46E5, #7C3AED);
-  padding: 20px 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
+.header{
+  display: grid;
+  grid-template-columns: .5fr 2fr .5fr .2fr;
+  gap: 20px;
 }
-
-.courseSectionButtons {
-  display: flex;
-  gap: 15px;
+.courseInfo{
+  display: grid;
+  grid-template-columns: .7fr 1fr .5fr;
+  gap: 4px;
 }
-
-.tabs {
-  background: #f8fafc;
-}
-
-.tabsList {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-start;
-  border-radius: 0px;
-}
-
-.tabContent {
-  padding: 30px;
+.h2{
+  font-size: 1.125rem;
+  font-weight: 600;
+  white-space: nowrap;
 }
